grav/user/themes/annekesinnema/scss/basics/_forms.scss
.form-input-wrapper,
.form-textarea-wrapper {
    position: relative;
    border: 1px solid $pink;
    border-top: 0;

    @media screen and (min-width: $tiny-screen) {
        display: flex;
        flex-wrap: wrap;
        align-items: flex-start;
        padding: 0;
    }
}

.input,
label {
    background-color: white;
    display: block;
    border: 0;
    border-radius: 0;
    -moz-appearance: none;
    width: 100%;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    position: relative;
    font-family: inherit;
    font-size: inherit;
    padding:  ($rhythmrem / 3) ($rhythmrem / 2);

    &:not(:first-child) {
        border-top: 1px solid $pink;
    }

    @media screen and (min-width: $tiny-screen) {
        display: flex;
        width: 100%;
        align-items: center;
        flex: 2 1 0;

        &:not(:first-child) {
            border-top: 0;
            border-left: 1px solid $pink;
        }
    }

    &:focus {
        outline-offset: initial;
        outline-color: $purple;
        outline-width: thick;
        background-color: $pink;
    }
}

textarea {
    resize: vertical;
    vertical-align: top;
    overflow: auto;
}

[type="submit"] {
    background-color: #8378c9;  
    background: linear-gradient(#8378c9 0%, #635b99 100%);
    border: 2px solid $purple;
    color: white;
    display: block;      
    font-family: inherit;
    font-size: inherit;
    font-weight: normal;
    margin-top: 0;
    padding: ($rhythmrem / 4) ($rhythmrem / 2);
    text-align: center; 
    text-decoration: none;
    transform: none;
    width: 100%;

    &:active,
    &:hover,
    &:focus {
        color: white;
        text-decoration: none;  
        background-color: #635b99;
        background: linear-gradient(#635b99 0%, #8378c9 100%);
    }

    &:visited {
        color: white;

        span:last-child::after {
            content: ' yes';
        }
    }
}

.form-field--checkboxes {
    .form-input-wrapper {
        border: 0;

        @media screen and (min-width: $tiny-screen) {
            display: -ms-grid;
            display: grid;
            -ms-grid-columns: 1fr 1fr;
            grid-template-columns: 1fr 1fr;
            grid-template-areas: 
            "group-label checkbox"
            "group-label checkbox"
            "group-label checkbox";
        }
    }
}

.checkbox-grouplabel {
    -ms-grid-column: 1;
    -ms-grid-column-span: 1;
    -ms-grid-row: 1;
    -ms-grid-row-span: 2;
    grid-area: group-label;
    align-items: flex-start;

    @media screen and (min-width: $tiny-screen) {
        padding: ($rhythmrem / 2);
        border-left: 1px solid $pink;
    }
}

.checkbox-label,
.checkbox-text {
    font-size: $size-h6;
    padding:  ($rhythmrem / 3) ($rhythmrem / 2);

    @media screen and (min-width: $tiny-screen) {
        padding: ($rhythmrem / 4) ($rhythmrem / 2);
    }
}

.input,
.checkbox-label {
    &:hover,
    &:focus {
        background: $pink;
    }

    &:focus-within {
        background: $pink;
        box-shadow: 0px 0px 2px 3px $purple;
        overflow-y: visible;
        z-index: 1;
    }
}

